[6R2yEhGU] added clearQueryCaches